# smart-city-foundation-model

./: .gitignore  README.md  london_twin_3d.html  mise.toml  pyproject.toml
apps/: demo_fire.py  demo_twin.py  demo_verify.py  demo_weather.py  deploy_demo.py  deploy_twin.py  eval_au_demand.py  eval_compare.py  eval_demand.py  eval_fire.py  eval_reasoner.py  eval_uk_demand.py  eval_weather.py  export_fireshield_feed.py  finetune_chronos.py  fireshield_server.py  gather_demand.py  presets.py  render_3d.py  serve.py  train_reasoner.py  twin.py  viz_fire.py  viz_fire_3d.py
docs/: physical-ai-world-model.md  use-cases.md
docs/experiments/: box-runbook.md  intervention-oracles.md  risk-weight-calibration.md
docs/plans/: 2026-06-12-sp1-ingestion-schema.md  2026-06-12-sp4-energy-forecasting.md  2026-06-12-sp8-serving-viz-app.md  2026-06-13-sp5-verification.md  2026-06-14-sp7-reasoning-environment.md  (+1 more)
scripts/: launch_reasoner_gpu.sh
tests/: test_app_cells.py  test_app_render.py  test_app_service.py  test_au_demand.py  test_baseline.py  test_burn.py  test_cache.py  test_chronos.py  test_conformal.py  test_demand.py  test_demand_adapter.py  test_demo_fire.py  test_demo_presets.py  test_demo_twin.py  test_deploy_engine.py  test_deploy_exposure.py  test_deploy_hazard.py  test_deploy_live.py  test_deploy_optimise.py  test_deploy_risk.py  test_deploy_roster.py  test_deploy_twin.py  test_deploy_viz.py  test_drift.py  test_eia.py  test_electricitymaps.py  test_elevation.py  test_entsoe.py  test_environment.py  test_era5.py  test_eval_fire.py  test_features_freq.py  test_fire.py  test_forecast_backtest.py  test_forecast_baselines.py  test_forecast_features.py  test_geo.py  test_geo_features.py  test_grpo.py  test_intervention.py  (+15 more)
(+48 files in other folders)
