[project]
name = "sctwin"
version = "0.0.1"
description = "Smart-city digital twin — ingestion & canonical spatiotemporal schema"
requires-python = ">=3.11"
dependencies = [
    "h3>=4.1",
    "pydantic>=2.7",
    "polars>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.5", "mypy>=1.10", "fastapi[testclient]>=0.115"]
forecast = ["numpy>=1.26", "scikit-learn>=1.4"]
app = ["fastapi>=0.115", "uvicorn>=0.32"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sctwin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
